force-app/main/default/objects/Agency_Front_End_User__c/Agency_Front_End_User__c.object-meta.xml
<CustomObject>
    <label>Agency Front End User</label>
    <nameField>
        <label>Agency Front End User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Front End Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>